2011-11-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/x86_64/dl.c (grub_arch_dl_relocate_symbols): Issue
	an error and not a fatal on unrecognised relocation types.

2011-11-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/ieee1275/openfw.c (grub_ieee1275_parse_args):
	Issue error rather than printf on unknown arguments.

2011-11-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/ieee1275/ieee1275.c (grub_ieee1275_set_property):
	Make buf a const.

2011-11-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfscrypt.c (GRUB_MOD_INIT), (GRUB_MOD_FINI):
	Fix module name.

2011-11-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ntfs.c (grub_ntfs_read_symlink): Stylistic fix. Remove
	leftover debug printf.

2011-11-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/btrfs.c (grub_btrfs_embed): Spelling fix.

2011-11-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/efiemu/main.c (grub_efiemu_register_configuration_table):
	A stylistic fix.

2011-11-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/probe.c (grub_cmd_probe): Fix error message.

2011-11-10  Shea Levy  <slevy@tieronedesign.com>

	Allow all modules to perform serial IO

	* grub-core/term-serial.c (grub_serial_find): Remove static qualifier
	* include/grub/serial.h (grub_serial_port_configure): New inline
	function.
	(grub_serial_port_fetch): Likewise.
	(grub_serial_port_put): Likewise.
	(grub_serial_port_fini): Likewise.
	(grub_serial_find): New proto.

2011-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Put symlink at the end of the node and fix a potential
	memory corruption.

	* grub-core/fs/iso9660.c (grub_fshelp_node): New field have_symlink.
	Make symlink into an array.
	(set_rockridge): Set have_symlink and alloc_dirents.
	(grub_iso9660_read_symlink): Use new layout.
	(grub_iso9660_iterate_dir): Fix memory corruption.
	Use new layout.
	(grub_iso9660_dir): Set have_symlink.